--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # https://git-scm.com/docs/gitignore
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
+
+## General ##
+/*.DS_Store
+
+## Node ##
 /node_modules/
 
 ## Sass ##
